--- a/huddle07/backend/.env
+++ b/huddle07/backend/.env
@@ -1,2 +1,2 @@
 CLIENT_LOGIN=http://localhost:3000
-MONGO_URI=mongodb+srv://zapp:zapp@cluster0.o2xrgbr.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=
